@@ -21,6 +21,7 @@ import javafx.scene.control.Button;
 import javafx.scene.control.Label;
 import javafx.scene.control.RadioButton;
 import javafx.scene.control.TextField;
+import javafx.scene.control.ToggleGroup;
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
 import javafx.scene.layout.HBox;
@@ -39,20 +40,19 @@ import org.example.features.ingredients.Ingredient;
 import org.example.features.order.OrderService;
 import org.example.features.order.ProductQuantity;
 import org.example.shared.SceneRouter;
-import javafx.scene.control.ToggleGroup;
-
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /** The type Checkout controller. */
 public class CheckoutController implements Initializable {
 
+  private static final Logger log = LoggerFactory.getLogger(CheckoutController.class);
   private final OrderService orderService;
   private final CouponsRepository couponsRepository;
   private final CampaignRepository campaignRepository;
+  private final SceneRouter router;
   private List<Campaign> campaigns = new ArrayList<>();
   private int currentCampaignIndex = 0;
-  private Timeline campaignTimeline;
-
-  private final SceneRouter router;
   @FXML private Label itemCountLabel;
   @FXML private Label totalPriceLabel;
   @FXML private VBox itemListContainer; // Changed from ListView to VBox
@@ -158,11 +158,11 @@ public class CheckoutController implements Initializable {
     VBox ingredientDiffBox = new VBox();
     ingredientDiffBox.setSpacing(3);
     Map<Ingredient, Integer> ingredients = item.getCustomizedProduct().getIngredientquanities();
-    Map<Ingredient, Integer> defaultings = item.getCustomizedProduct().getProduct().getIngredients();
+    Map<Ingredient, Integer> defaultIngredients = item.getCustomizedProduct().getProduct().getIngredients();
     
-    for (Ingredient ingredient: defaultings.keySet() ){
+    for (Ingredient ingredient: defaultIngredients.keySet() ){
       int quantity = ingredients.getOrDefault(ingredient, 0);
-      int defaultQty = defaultings.get(ingredient);
+      int defaultQty = defaultIngredients.get(ingredient);
 
       if(quantity != defaultQty) {
         String ingLabel;
@@ -218,6 +218,7 @@ public class CheckoutController implements Initializable {
     container.getChildren().addAll(textContainer, spacer, buttonBox);
     return container;
   }
+
   public void applyCoupon() {
     String coupon = couponCodeField.getText();
     if (coupon == null || coupon.isEmpty()) {
@@ -237,6 +238,7 @@ public class CheckoutController implements Initializable {
     );
     totalPriceLabel.setText(String.format("Total: $%.2f", orderService.getTotal()));
   }
+
   private void printReceipt() {
     System.out.println("Printing receipt...");
     router.goToMemberLoginPage();
@@ -254,6 +256,7 @@ public class CheckoutController implements Initializable {
     ToggleGroup printToggleGroup = new ToggleGroup();
     yesPrint.setToggleGroup(printToggleGroup);
     noPrint.setToggleGroup(printToggleGroup);
+    yesPrint.setSelected(true);
 
 
     int itemCount = orderService.getItems().size();
@@ -287,16 +290,16 @@ public class CheckoutController implements Initializable {
     try {
         campaigns = campaignRepository.findActiveCampaigns();
     } catch (Exception e) {
-        e.printStackTrace();
-        System.err.println("Failed to load campaigns: " + e.getMessage());
+        log.debug("Failed to load campaigns: ", e);
+        log.error("Failed to load campaigns: {}", e.getMessage());
         return;
     }
     if (!campaigns.isEmpty()) {
-        showCampaignCard(campaigns.get(0));
-        campaignTimeline = new Timeline(
-            new KeyFrame(Duration.seconds(10), event -> rotateCampaignCard())
+        showCampaignCard(campaigns.getFirst());
+      Timeline campaignTimeline = new Timeline(
+          new KeyFrame(Duration.seconds(10), event -> rotateCampaignCard())
 
-        );
+      );
         campaignTimeline.setCycleCount(Timeline.INDEFINITE);
         campaignTimeline.play();
     }else {
